--- a/tools/npcomp-run-mlir/CMakeLists.txt
+++ b/tools/npcomp-run-mlir/CMakeLists.txt
@@ -23,4 +23,8 @@ target_link_libraries(npcomp-run-mlir PRIVATE
   MLIRTargetLLVMIR
   MLIRSupport
   NPCOMPInitAll
+  NPCOMPJITRuntime
+  )
+add_dependencies(npcomp-run-mlir
+  NPCOMPCompilerRuntimeShlib
   )
