--- a/lib/Dialect/CMakeLists.txt
+++ b/lib/Dialect/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(Basicpy)
-add_subdirectory(NpcompRt)
+add_subdirectory(Npcomprt)
 add_subdirectory(Numpy)
 add_subdirectory(TCF)
 add_subdirectory(TCP)
