--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,6 +6,9 @@ add_subdirectory(Python)
 add_subdirectory(Typing)
 add_subdirectory(runtime)
 
+if(NPCOMP_ENABLE_REFJIT)
+  add_subdirectory(Backend/RefJIT)
+endif()
 if(NPCOMP_ENABLE_IREE)
   add_subdirectory(Backend/IREE)
 endif()
