--- a/python_native/CMakeLists.txt
+++ b/python_native/CMakeLists.txt
@@ -21,6 +21,10 @@ if(NPCOMP_ENABLE_IREE)
   list(APPEND NPCOMP_PYEXT_LIBADD NPCOMPBackendIREEPythonModule)
 endif()
 
+if(NPCOMP_ENABLE_REFJIT)
+  list(APPEND NPCOMP_PYEXT_LIBADD NPCOMPBackendRefJITPythonModule)
+endif()
+
 # TODO(laurenzo): Add a config setting to control this.
 # set(NPCOMP_PYEXT_LINK_MODE MODULE)
 # set(NPCOMP_PYEXT_LIBADD "")
