Wire through codegen and runtime dependencies.
* Enables e2e test.
* With what I've learned in upstream about test directory layout, I can consolidate most of the separate directories we have for these things. Will do that in a followup.
* Not pleased with the LLVM global initialization depends but serviceable for now.

--- a/lib/Python/CMakeLists.txt
+++ b/lib/Python/CMakeLists.txt
@@ -2,7 +2,21 @@
 # NPCOMPPythonCommon
 ################################################################################
 
+include(AddLLVM)
 include(NpcompPython)
+
+# TODO: This should not be wired in at such a low/unconditional level.
+# It is done here to be kept with the other LLVM initialization until a better
+# place can be found for it.
+set(ExtraInit_LIBADD)
+if(NPCOMP_ENABLE_REFJIT)
+  llvm_map_components_to_libnames(refjit_llvm_libs
+    nativecodegen
+  )
+  message(STATUS "Including LLVM libs for RefJit: ${refjit_llvm_libs}")
+  list(APPEND ExtraInit_LIBADD
+    ${refjit_llvm_libs})
+endif()
 
 set(PYBIND_SOURCES
   MlirInit.cpp
@@ -34,6 +48,8 @@ target_link_libraries(NPCOMPPythonCommon
   MLIRLLVMIR
   MLIRPass
   MLIRTransforms
+
+  ${ExtraInit_LIBADD}
 )
 
 npcomp_python_target_compile_options(NPCOMPPythonCommon)
