Misc fixes to enable building/testing on manylinux2014 images.
* Since the manylinux images do not hard-link against python libs (resolving them at runtime), the module must be built without resolving undefined references.
* For some reason, builds on this platform are stricter, exposing dependency ordering issues.
* The CMake bits to build the extension are still somewhat of a mess. I have better versions both upstream and in IREE and will be reconciling. For now, don't look too closely.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,9 +106,12 @@ endif()
 # Python Configuration
 #-------------------------------------------------------------------------------
 
+set(NPCOMP_PYTHON_BINDINGS_VERSION_LOCKED 1 CACHE BOOL
+       "Links to specific python libraries, resolving all symbols.")
+
 # TODO(laurenzo): Rationalize with how this is done elsewhere
 find_package(PythonInterp REQUIRED)
-find_package(PythonLibs REQUIRED)
+find_package(PythonLibs)
 message(STATUS "Found python include dirs: ${PYTHON_INCLUDE_DIRS}")
 message(STATUS "Found ppython libraries: ${PYTHON_LIBRARIES}")
 find_package(pybind11 CONFIG REQUIRED)
@@ -125,6 +128,6 @@ add_custom_target(check-npcomp)
 
 add_subdirectory(include/npcomp)
 add_subdirectory(lib)
-add_subdirectory(python)
 add_subdirectory(tools)
+add_subdirectory(python)
 add_subdirectory(test)
