--- a/lib/runtime/CMakeLists.txt
+++ b/lib/runtime/CMakeLists.txt
@@ -11,6 +11,9 @@ set(LLVM_OPTIONAL_SOURCES
 add_mlir_library(NPCOMPRuntime
   Runtime.cpp
 
+  LINK_LIBS
+  MLIRExecutionEngine
+
   EXCLUDE_FROM_LIBMLIR
 )
 
