[cmake] Updates for basic shared library support
Mostly this is CMake cleanup.  Several library dependencies are missing, which
is often revealed with shared library builds.  Also, it's generally bad to
link directly against LLVM libraries because it fails when using
LLVM_LINK_LLVM_DYLIB.  MLIR will pull in libLLVM.so, and there will be
duplicate linkage with the the explicit libraries.  There may need to be more
refactoring here.

--- a/lib/Dialect/Basicpy/IR/CMakeLists.txt
+++ b/lib/Dialect/Basicpy/IR/CMakeLists.txt
@@ -7,7 +7,8 @@ add_mlir_dialect_library(NPCOMPBasicpyDialect
 
   DEPENDS
   MLIRBasicpyOpsIncGen
-  NPCOMPTypingCPA
-)
 
-target_link_libraries(NPCOMPBasicpyDialect PUBLIC MLIRIR)
+  LINK_LIBS PUBLIC
+  NPCOMPTypingCPA
+  MLIRIR
+)
