--- a/lib/JITRuntime/CMakeLists.txt
+++ b/lib/JITRuntime/CMakeLists.txt
@@ -4,13 +4,13 @@ add_mlir_library(NPCOMPJITRuntime
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SRC_DIR}/include/npcomp/JITRuntime
 
-  DEPENDS
-  NPCOMPE2E
-  MLIRExecutionEngine
-
   LINK_COMPONENTS
   Core
 
   LINK_LIBS PUBLIC
   NPCOMPRuntime
+  NPCOMPE2E
+  MLIRExecutionEngine
   )
+
+mlir_check_all_link_libraries(NPCOMPE2E)
