Make code that depends on the legacy "type dispatch" mechanism optional.
* This code is fairly tied to a specific ~1.3 version and uses a legacy dispatch mechanism.
* Moving it and making it optional allows the project to build with PyTorch 1.6 and makes it possible for us to start building out a more modern interface mechanism in parallel.
* Some of the moved code will be brought back into the more modern path, but isolating it now lets this be done incrementally.
* Tests are left failing since the entire frontend is optional and the next step involves reworking the interface mechanism to get them to passing in both regimes.

--- a/frontends/pytorch/csrc/type_dispatch/CMakeLists.txt
+++ b/frontends/pytorch/csrc/type_dispatch/CMakeLists.txt
@@ -7,28 +7,25 @@ include_directories(
   ${PYTHON_INCLUDE_DIRS}
   )
 link_directories("${TORCH_INSTALL_PREFIX}/lib")
-
-set(torch_mlir_optional_libraries)
-if(NPCOMP_ENABLE_TORCH_TYPE_DISPATCH)
-  list(APPEND torch_mlir_optional_libraries
-    npcomp_torch_type_dispatch_bindings
-    )
-endif()
-
-add_library(_torch_mlir SHARED
-  init_python_bindings.cpp
+add_library(npcomp_torch_type_dispatch_bindings
+  aten_mlir_bridge.cpp
+  aten_mlir_type.cpp
+  aten_mlir_type_default.cpp
+  device.cpp
+  ir.cpp
+  jit.cpp
+  mlir_gen.cpp
+  python_bindings.cpp
+  tensor.cpp
+  tensor_impl.cpp
+  torch_util.cpp
   )
-set_target_properties(_torch_mlir PROPERTIES PREFIX "")
+
 get_property(mlir_libs GLOBAL PROPERTY MLIR_ALL_LIBS)
 target_link_libraries(_torch_mlir
   NPCOMPATenDialect
   ${TORCH_LIBRARIES}
   ${mlir_libs}
   ${PYTHON_LIBRARIES}
-  ${torch_mlir_optional_libraries}
   torch_python
   )
-
-if(NPCOMP_ENABLE_TORCH_TYPE_DISPATCH)
-  add_subdirectory(type_dispatch)
-endif()
