Make code that depends on the legacy "type dispatch" mechanism optional. (#32)
* Make code that depends on the legacy "type dispatch" mechanism optional.

* This code is fairly tied to a specific ~1.3 version and uses a legacy dispatch mechanism.
* Moving it and making it optional allows the project to build with PyTorch 1.6 and makes it possible for us to start building out a more modern interface mechanism in parallel.
* Some of the moved code will be brought back into the more modern path, but isolating it now lets this be done incrementally.
* Tests are left failing since the entire frontend is optional and the next step involves reworking the interface mechanism to get them to passing in both regimes.
* Fix a few bogons to get things building
* Add Dockerfile with pytorch

Also, I configure with:
-DCMAKE_PREFIX_PATH="/opt/pytorch/pytorch"

(which is where pytorch is installed in this container)

* Make a dep conditional.

Co-authored-by: stephenneuendorffer <stephen.neuendorffer@xilinx.com>

--- a/frontends/pytorch/test/CMakeLists.txt
+++ b/frontends/pytorch/test/CMakeLists.txt
@@ -8,8 +8,14 @@ configure_lit_site_cfg(
 set(TEST_DEPENDS
   FileCheck count not
   _torch_mlir
-  aten_ops
   )
+
+
+if(NPCOMP_ENABLE_TORCH_TYPE_DISPATCH)
+  list(APPEND TEST_DEPENDS
+    aten_ops
+  )
+endif()
 
 add_lit_testsuite(check-frontends-pytorch "Running the frontends-pytorch regression tests"
   ${CMAKE_CURRENT_BINARY_DIR}
