--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -6,3 +6,19 @@ add_subdirectory(TCPToLinalg)
 if(NPCOMP_ENABLE_IREE)
 add_subdirectory(BasicpyToIREEVM)
 endif()
+
+add_mlir_library(NPCOMPConversionPasses
+  Passes.cpp
+
+  DEPENDS
+  NPCOMPConversionPassIncGen
+
+  LINK_COMPONENTS
+  Core
+
+  LINK_LIBS PUBLIC
+  NPCOMPBasicpyToSTD
+  NPCOMPNumpyToTCF
+  NPCOMPTCFToTCP
+  NPCOMPTCPToLinalg
+)
