Totally rework RefE2E tensor to memref flow.
This now gets the overall "RefE2E" compilation stack to a point that I'm
fairly happy with. We simplify it by mostly embracing the "descriptor"
view of the world.

The overall flow is best understood by reading through the
createE2ELoweringPipeline function in lib/E2E/E2E.cpp
That function creates a pass pipeline that lowers from "TCF" (which is
~numpy level of abstraction) down to LLVM IR.

A brief high-level summary of what happens there:

1. TCF to TCP conversion. This involves reifying error handling in the
form of shape constraints. See test/Conversion/TCFToTCP/basic.mlir

2. Lowering shape constraints. This converts shape constraints into
eager error-handling code. See test/E2E/lower-shape-constraints.mlir
This pass will soon go upstream.
Because this lowers to std.assert, some later passes like
LowerToNpcomprtABI and LowerToLLVM are updated to properly plumb this
through e2e.
See test/npcomp-run-mlir/invalid-broadcast.mlir for an execution test
that properly aborts in case of an error.

3. Lowering tensors to memrefs. This is done via a series of passes
rather than an single mega conversion. Unlike the previous code that
mixed in the npcomprt ABI stuff here, it's now a very clean "pure
memref" conversion.
See test/E2E/lower-*-to-memref.mlir and
lib/E2E/TensorToMemref/
Most of the changes are concentrated here.

4. As part of the above, we use the upstream ConvertShapeToStandard for
lowering shapes.

5. We lower linalg to loops and lower loops to CFG using upstream
passes.

6. Rewrite the "ABI" boundaries of the program to npcomprt data
structures (LowerToNpcomprtABI). This mainly affects ABI boundaries and
how global tensor constants are represented. One of the major
improvements in this commit is that now it's a very clean rewrite that
just replaces memrefs on ABI boundaries with !npcomprt.tensor (before
there was a get_extent function that is not needed).
See test/E2E/lower-to-npcomprt-abi.mlir

7. Lower to LLVM 

--- a/lib/E2E/CMakeLists.txt
+++ b/lib/E2E/CMakeLists.txt
@@ -1,9 +1,13 @@
 add_mlir_library(NPCOMPE2E
+  BypassShapes.cpp
   E2E.cpp
-  LowerRankedShapes.cpp
-  LowerToHybridTensorMemRef.cpp
+  LowerShapeConstraints.cpp
   LowerToLLVM.cpp
   LowerToNpcomprtABI.cpp
+  TensorToMemref/LowerConstantTensorsToMemref.cpp
+  TensorToMemref/LowerShapedResultsToMemref.cpp
+  TensorToMemref/LowerStdToMemref.cpp
+  TensorToMemref/LowerStructuralToMemref.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SRC_DIR}/include/npcomp/E2E
@@ -17,9 +21,10 @@ add_mlir_library(NPCOMPE2E
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRLinalgOps
+  MLIRSCFToStandard
+  MLIRShapeToStandard
   MLIRStandardOps
   MLIRStandardToLLVM
-  MLIRSCFToStandard
   )
 
 mlir_check_all_link_libraries(NPCOMPE2E)
