Update docker, instructions and some fixes for the pytorch 1.3 build.
* Includes pybind11 directly (for some reason using the pytorch helper header for this depends on a source file not in the image).
* Installs nnpack into the image.
* Installs new-clang and LLD and configures environment to use it (otherwise, link time is terrible).
* Fixes a gcc compile error (in the off chance you build with default gcc compiler).
* Tests are failing based on some dialect registration stuff that must not have been factored correctly. Will followup with a fix.

--- a/docker/pytorch-1.3/Dockerfile
+++ b/docker/pytorch-1.3/Dockerfile
@@ -19,7 +19,6 @@ RUN /opt/conda/bin/conda install matplotlib pybind11
 #torchvision
 
 ENV LD_LIBRARY_PATH "${LD_LIBRARY_PATH}:/opt/conda/lib"
-
 # Rebuild pytorch
 
 WORKDIR /opt/pytorch/pytorch
@@ -34,3 +33,12 @@ RUN TORCH_CUDA_ARCH_LIST="5.2 6.0 6.1 7.0 7.5+PTX" \
 
 WORKDIR /workspace
 
+# Additional packages for building npcomp
+RUN apt-get install clang-10 lld-10 --assume-yes
+RUN conda install -c gaiar nnpack
+
+# Additional env for building npcomp.
+ENV CC=clang-10
+ENV CXX=clang++-10
+ENV CPPFLAGS "-I/opt/conda/include"
+ENV LDFLAGS "-fuse-ld=/usr/bin/ld.lld-10 -L/opt/conda/lib"
