Add a torch.kernel_call op and associated predicates.

--- a/lib/Dialect/Torch/IR/CMakeLists.txt
+++ b/lib/Dialect/Torch/IR/CMakeLists.txt
@@ -14,4 +14,6 @@ add_mlir_dialect_library(NPCOMPTorchDialect
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRSupport
+  NPCOMPBasicpyDialect
+  NPCOMPNumpyDialect
 )
