--- a/lib/CAPI/CMakeLists.txt
+++ b/lib/CAPI/CMakeLists.txt
@@ -1,8 +1,10 @@
-add_mlir_library(NPCOMPCAPIRegistration
+add_mlir_library(NPCOMPCAPIIR
   Registration.cpp
-
+  Types.cpp
   EXCLUDE_FROM_LIBMLIR
 
   LINK_LIBS PUBLIC
   NPCOMPInitAll
+  NPCOMPBasicpyDialect
+  NPCOMPNumpyDialect
   )
