--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(CAPI)
+
 llvm_canonicalize_cmake_booleans(
   NPCOMP_ENABLE_IREE
 )
@@ -11,6 +13,7 @@ configure_lit_site_cfg(
 
 set(NPCOMP_TEST_DEPENDS
         FileCheck count not
+        npcomp-capi-ir-test
         npcomp-opt
         npcomp-run-mlir
         NPCOMPNativePyExt
