Rename a couple CMake targets.
NPCOMPFoo to NPCOMPFooDialect for consistency with others.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -42,10 +42,10 @@ add_mlir_library(NPCOMPInitAll
   # Local depends
   NPCOMPE2E
   NPCOMPRefBackendDialect
-  NPCOMPTCP
-  NPCOMPTCF
+  NPCOMPTCPDialect
+  NPCOMPTCFDialect
   NPCOMPTorchDialect
-  NPCOMPNpcomprt
+  NPCOMPNpcomprtDialect
   NPCOMPATenDialect
   NPCOMPBasicpyDialect
   NPCOMPBasicpyPasses
