[RefBackend] Rename "E2E" to RefBackend.

--- a/include/npcomp/CMakeLists.txt
+++ b/include/npcomp/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(Conversion)
 add_subdirectory(Dialect)
-add_subdirectory(E2E)
+add_subdirectory(RefBackend)
 add_subdirectory(Typing)
