[RefBackend] Move runtime related code under npcomp/RefBackend/
Other than the dialect definitions (which will live in standard Dialect/
subdirectory), the goal here is to keep RefBackend-related code nested
in {include/npcomp,lib,test}/RefBackend.

--- a/lib/Backend/RefJIT/CMakeLists.txt
+++ b/lib/Backend/RefJIT/CMakeLists.txt
@@ -16,7 +16,7 @@ target_link_libraries(NPCOMPBackendRefJITPythonModule
   MLIRTargetLLVMIR
 
   NPCOMPPythonCommon
-  NPCOMPJITRuntime
+  NPCOMPRefBackendJITHelpers
 )
 
 npcomp_python_target_compile_options(NPCOMPBackendRefJITPythonModule)
