--- a/lib/Dialect/CMakeLists.txt
+++ b/lib/Dialect/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_subdirectory(ATen)
 add_subdirectory(Basicpy)
-add_subdirectory(Npcomprt)
 add_subdirectory(Numpy)
 add_subdirectory(RefBackend)
+add_subdirectory(Refbackrt)
 add_subdirectory(TCF)
 add_subdirectory(TCP)
 add_subdirectory(Torch)
